@@ -341,9 +341,26 @@ AC_DEFINE([_FILE_OFFSET_BITS], [64], [File Offset size])
 
 
 #
-# Checks for header files
+# Are we targetting Win32?
+#
+AC_MSG_CHECKING([for Win32])
+AC_COMPILE_IFELSE([AC_LANG_PROGRAM([
+#ifdef WIN32
+	#error Yup
+#endif
+],[])], [ac_cv_win32="no"], [ac_cv_win32="yes"])
+if test "$ac_cv_win32" = "yes"; then
+	AC_MSG_RESULT([yes])
+else
+	AC_MSG_RESULT([no])
+fi
+
+
+#
+# Checks for header files (which aren't needed on Win32)
 #
 AC_HEADER_STDC
+if test "$ac_cv_win32" = "no"; then
 # libupnp code doesn't use autoconf variables yet,
 # so just abort if a header file is not found.
 AC_CHECK_HEADERS(
@@ -365,13 +382,38 @@ AC_CHECK_HEADERS(
 	],
 	[],
 	[AC_MSG_ERROR([required header file missing])])
+fi
 
 
 #
 # Checks for typedefs, structures, and compiler characteristics
 #	
 AC_C_CONST
-TYPE_SOCKLEN_T
+
+# The test for socklen_t was getting it wrong when it exists but is in ws2tcpip.h,
+# so we use a new test.
+#TYPE_SOCKLEN_T
+
+AC_CHECK_HEADERS([sys/types.h sys/socket.h ws2tcpip.h])
+AC_MSG_CHECKING(for socklen_t)
+AC_COMPILE_IFELSE([AC_LANG_PROGRAM([
+#ifdef HAVE_SYS_TYPES_H
+	#include <sys/types.h>
+#endif
+#ifdef HAVE_SYS_SOCKET_H
+	#include <sys/socket.h>
+#endif
+#ifdef HAVE_WS2TCPIP_H
+	#include <ws2tcpip.h>
+#endif
+],[ socklen_t t = 0; return t; ])
+],[ac_cv_socklen_t="yes"],[ac_cv_socklen_t="no"])
+if test "$ac_cv_socklen_t" = "yes"; then
+	AC_MSG_RESULT([yes])
+else
+	AC_MSG_RESULT([no, using int])
+	AC_DEFINE(socklen_t, int, [Type for storing the length of struct sockaddr])
+fi
 
 
 #
