@@ -1,4 +1,3 @@
-#ifdef WIN32
 /*
  * Copyright (c) 1996-1999 by Internet Software Consortium.
  *
@@ -16,39 +15,15 @@
  * SOFTWARE.
  */
 
-/*#include <sys/param.h>
-#include <sys/types.h>
-#include <sys/socket.h>
 
-#include <netinet/in.h>
-#include <arpa/inet.h>
-#include <arpa/nameser.h>*/
-#include <winsock2.h>
-
-#include <errno.h>
-#include <stdio.h>
-#include <string.h>
-typedef int socklen_t;
-#define EAFNOSUPPORT 97
-/*
- * WARNING: Don't even consider trying to compile this on a system where
- * sizeof(int) < 4.  sizeof(int) 4 is fine; all the world's not a VAX.
- */
+/* This file is WIN32 only */
+#ifdef WIN32
 
 
-/* const char *
- * inet_ntop4(src, dst, size)
- *	format an IPv4 address
- * return:
- *	`dst' (as a const)
- * notes:
- *	(1) uses no statics
- *	(2) takes a u_char* not an in_addr as input
- * author:
- *	Paul Vixie, 1996.
- */
-static const char *
-inet_ntop4(const u_char *src, char *dst, socklen_t size)
+#include "inet_pton.h"
+
+
+static const char *inet_ntop4(const u_char *src, char *dst, socklen_t size)
 {
 	char tmp[sizeof ("255.255.255.255") + 1] = "\0";
 	int octet;
@@ -82,20 +57,8 @@ inet_ntop4(const u_char *src, char *dst, socklen_t size)
 }
 
 
-/* const char *
- * inet_ntop6(src, dst, size)
- *	convert IPv6 binary address into presentation (printable) format
- * author:
- *	Paul Vixie, 1996.
- */
-
 #ifdef INET_IPV6
-
-static const char *
-inet_ntop6(src, dst, size)
-	const u_char *src;
-	char *dst;
-	socklen_t size;
+static const char *inet_ntop6(const u_char *src, char *dst, socklen_t size)
 {
 	/*
 	 * Note that int32_t and int16_t need only be "at least" large enough
@@ -182,18 +145,7 @@ inet_ntop6(src, dst, size)
 #endif /* INET_IPV6 */
 
 
-/* int
- * inet_pton4(src, dst)
- *	like inet_aton() but without all the hexadecimal and shorthand.
- * return:
- *	1 if `src' is a valid dotted quad, else 0.
- * notice:
- *	does not touch `dst' unless it's returning 1.
- * author:
- *	Paul Vixie, 1996.
- */
-static int
-inet_pton4(const char *src,u_char *dst)
+static int inet_pton4(const char *src,u_char *dst)
 {
 	int saw_digit, octets, ch;
 	u_char tmp[4], *tp;
@@ -225,29 +177,12 @@ inet_pton4(const char *src,u_char *dst)
 	if (octets < 4)
 		return (0);
 	memcpy(dst, tmp, 4);
-	return (1);
+	return 1;
 }
 
-/* int
- * inet_pton6(src, dst)
- *	convert presentation level address to network order binary form.
- * return:
- *	1 if `src' is a valid [RFC1884 2.2] address, else 0.
- * notice:
- *	(1) does not touch `dst' unless it's returning 1.
- *	(2) :: in a full address is silently ignored.
- * credit:
- *	inspired by Mark Andrews.
- * author:
- *	Paul Vixie, 1996.
- */
 
 #ifdef INET_IPV6
-
-static int
-inet_pton6(src, dst)
-	const char *src;
-	u_char *dst;
+static int inet_pton6(const char *src, u_char *dst)
 {
 	static const char xdigits[] = "0123456789abcdef";
 	u_char tmp[16], *tp, *endp, *colonp;
@@ -330,20 +265,10 @@ inet_pton6(src, dst)
 	memcpy(dst, tmp, 16);
 	return (1);
 }
-
 #endif /* INET_IPV6 */
 
 
-
-/* char *
- * inet_ntop(af, src, dst, size)
- *	convert a network format address to presentation format.
- * return:
- *	pointer to presentation format address (`dst'), or NULL (see errno).
- * author:
- *	Paul Vixie, 1996.
- */
-extern const char *inet_ntop(int af,const void *src,char *dst,socklen_t size)
+const char *inet_ntop(int af,const void *src,char *dst,socklen_t size)
 {
 	switch (af) {
 	case AF_INET:
@@ -353,24 +278,13 @@ extern const char *inet_ntop(int af,const void *src,char *dst,socklen_t size)
 		return (inet_ntop6(src, dst, size));
 #endif
 	default:
-		//__set_errno (EAFNOSUPPORT);
-		return (NULL);
+		/*__set_errno(EAFNOSUPPORT);*/
+		return NULL;
 	}
 	/* NOTREACHED */
 }
 
 
-/* int
- * inet_pton(af, src, dst)
- *	convert from presentation format (which usually means ASCII printable)
- *	to network format (which is usually some kind of binary format).
- * return:
- *	1 if the address was valid for the specified address family
- *	0 if the address wasn't valid (`dst' is untouched in this case)
- *	-1 if some other error occurred (`dst' is untouched in this case, too)
- * author:
- *	Paul Vixie, 1996.
- */
 int inet_pton(int af,const char *src,void *dst)
 {
 	switch (af) {
@@ -381,9 +295,12 @@ int inet_pton(int af,const char *src,void *dst)
 		return (inet_pton6(src, dst));
 #endif
 	default:
-		//__set_errno (EAFNOSUPPORT);
-		return (-1);
+		/*__set_errno(EAFNOSUPPORT);*/
+		return -1;
 	}
 	/* NOTREACHED */
 }
-#endif
+
+
+#endif /* WIN32 */
+
