@@ -3,6 +3,9 @@ Version 1.8.0
 *******************************************************************************
 
 2008-05-24 Marcelo Jimenez <mroberto(at)users.sourceforge.net>
+	* Ported Peter Hartley's patch to compile with mingw.
+
+2008-05-24 Marcelo Jimenez <mroberto(at)users.sourceforge.net>
 	* Added some debug capability to ixml.
 
 2008-05-02 Marcelo Jimenez <mroberto(at)users.sourceforge.net>
